--- a/style.css
+++ b/style.css
@@ -49,10 +49,30 @@ header {
 
 .navbar a {
     position: relative;
-    font-size:1.1em;
-    color: white;
+    font-size:1.4em;
+    font-weight: bold;
+    color: #383C4D;
     text-decoration: none;
     margin-left: 4vw;
+}
+
+.navbar a:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 3.5vh;
+    width: 100%;
+    height: 3px;
+    background: #500000;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform 250ms;
+}
+
+.navbar a:hover::after {
+    transform-origin: left;
+    transform: scaleX(1);
+    background: #383C4D;
 }
 
 .navbar .loginBtn-popup {
@@ -66,7 +86,7 @@ header {
     font-size: 1.5em;
     color: #383C4D;
     font-weight: bold;
-    margin-left: 4vh;
+    margin-left: 3vw;
     transition: 100ms;
 }
 
