--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background:#787878 url('Images/solar_car_racing.webp') no-repeat;   
+    background:#787878 url('Images/solar_car.webp') no-repeat;   
     background-size: cover; 
     display: flex;
     justify-content: center;
@@ -23,7 +23,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    padding: 12vh 5vw 5vh 5vw;
+    padding: 0px 20px 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -51,7 +51,7 @@ header {
     position: relative;
     font-size:1.4em;
     font-weight: bold;
-    color: #383C4D;
+    color: #500000;
     text-decoration: none;
     margin-left: 4vw;
 }
@@ -60,7 +60,7 @@ header {
     content: '';
     position: absolute;
     left: 0;
-    top: 3.5vh;
+    top: 25px;
     width: 100%;
     height: 3px;
     background: #500000;
@@ -76,24 +76,25 @@ header {
 }
 
 .navbar .loginBtn-popup {
-    width: 10vw;
-    height: 7vh;
+    width: 160px;
+    height: 50px;
     background:transparent;
-    border: 3px solid #383C4D;
+    backdrop-filter: blur(5px);
+    border: 3px solid #500000;
     outline: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 1.5em;
-    color: #383C4D;
+    color: #500000;
     font-weight: bold;
+    margin-top: 1vh;
     margin-left: 3vw;
     transition: 100ms;
 }
 
 .navbar .loginBtn-popup:hover {
     background: transparent;
-    color: #222329;
-    border: 4px solid #222329;
+    border: 4px solid #400000;
     border-radius: 10px;
 }
 /*30323B*/
@@ -104,8 +105,8 @@ header {
 
 .wrapper {
     position: relative;
-    width: 20vw;
-    height: 50vh;
+    width: 350px;
+    height: 375px;
     background: rgba(120, 120, 120,.75);
     border: 3px solid rgba(255, 255, 255, .5);
     border-radius: 10px;
@@ -117,6 +118,11 @@ header {
     transform: scale(0);
     transition: 250ms;
     cursor: default;
+    overflow: hidden;
+}
+
+.wrapper.active {
+    height: 345px;
 }
 
 .wrapper.active-popup {
@@ -125,6 +131,7 @@ header {
 
 .wrapper .close-icon {
     position: absolute;
+    overflow: hidden;
     top: 5px;
     right: 5px;
     height: 25px;
@@ -135,12 +142,34 @@ header {
     justify-content: center;
     align-items: center;
     cursor: pointer;
-
+    z-index: 99;
 }
 
 .wrapper .form-box {
     width: 100%;
     padding: 2vw;
+    z-index: 1;
+}
+
+.wrapper .form-box.login {
+    transition: transform 150ms ease;
+    transform: translateX(0);
+}
+
+.wrapper .form-box.registration {
+    position: absolute;
+    transition: none;
+    transform: translateX(400px);
+}
+
+.wrapper.active .form-box.login {
+    transition: none;
+    transform: translateX(-400px);
+}
+
+.wrapper.active .form-box.registration {
+    transition: transform 150ms ease;
+    transform: translateX(0px);
 }
 
 .form-box h2 {
@@ -153,7 +182,7 @@ header {
     position: relative;
     width: 100%;
     height: 50px;
-    border-bottom: 2px solid #500000;
+    border-bottom: 2px solid rgb(19, 19, 19);
     margin: 30px 0;
 }
 
@@ -199,12 +228,25 @@ header {
 }
 
 .remember-password {
-    font-size: .9em;
+    /*font-size: .9em;*/
     color: #500000;
     font-weight: bold;
-    margin: -15px 0 35px;
+    margin: -15px 0 2px 0;
     display: flex;
     justify-content: space-between;
+}
+
+.register-link, 
+.login-link {
+    color: #500000;
+    font-weight: bold;
+    margin: 7px 0 10px 0;
+}
+
+.remember-password p, 
+.register-link p, 
+.login-link p {
+    color: rgb(19, 19, 19);
 }
 
 .remember-password label input {
@@ -212,12 +254,16 @@ header {
     margin-right: 3px;
 }
 
-.remember-password a {
+.remember-password a, 
+.register-link a, 
+.login-link a {
     color: #500000;
     text-decoration: none;
 }
 
-.remember-password a:hover {
+.remember-password a:hover, 
+.register-link a:hover,
+.login-link a:hover {
     text-decoration: underline;
 }
 
@@ -226,4 +272,49 @@ header {
     height: 5vh;
     font-size: 1.2em;
     font-weight: bold;
+    border-radius: 2px;
+    border: none;
+}
+
+.btn:hover {
+    border: 1px solid #500000;
+}
+
+.notify-incorrect {
+    color: transparent;
+    margin-bottom: 15px;
+}
+
+.notify-incorrect:active {
+    color: red;
+}
+
+@media screen and (max-width: 800px) {
+
+    body {
+        background:#787878 url('Images/solar_car_racing_mobile.jpg') no-repeat;
+        background-size: cover;
+    }
+
+    .logo {
+        font-size: 5vw;
+    }
+
+    .navbar .loginBtn-popup {
+        color: #500000;
+        border-color: #500000;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .logo {
+        font-size: 2em;
+    }
+    .navbar .loginBtn-popup {
+        width: 100px;
+    }
+    
+    .wrapper {
+        width: 250px;
+    }
 }
